@@ -1,5 +1,8 @@
 Changes with Apache 1.3.7
 
+  *) Add DSO support for OpenStep (Mach 4.2) platform.
+     [Ralf S. Engelschall, Rex Dieter <rdieter@math.unl.edu>] PR#3997
+
   *) Fix sed regex for generating ap_config_auto.h in src/Configure.
      [Jan Gallo <gallo@pvt.sk>] PR#3690, PR#4373
  
